fix word wrap, just store the dir,  do not copy it

--- a/src/app/home/doctype/doctype.component.css
+++ b/src/app/home/doctype/doctype.component.css
@@ -36,6 +36,9 @@ img {
   font-size: large;
   width: 100%;
   margin-right: 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .dir {
@@ -44,4 +47,5 @@ img {
   font-size: smaller;
   text-overflow: ellipsis;
   overflow: hidden;
+  white-space: nowrap;
 }
